# OrificePlateManager

./: .dockerignore  .gitignore  Makefile  pyproject.toml
app/: __init__.py  config.py  session.py  utils.py  views.py
app/models/: __init__.py  operator.py  orifice_plate.py  replacement_history.py
app/resources/: __init__.py  admin.py  orifice_plate.py
app/schemes/: __init__.py  orifice_plate.py
app/static/: admin.js  index.css  index.js
app/static/components/: multiselect.css  multiselect.js  variables.css
app/static/ui-templates/: plate_card.html.j2
app/templates/: admin.html.j2  base.html.j2  expired.html.j2  index.html.j2
docker/: docker-compose.yml
docker/dockerfiles/: WEB
environment/: database.env  web.env
